kubernetes-volumes/testpageingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: testpage.unitsky.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-for-deployment
                port:
                  number: 8090
